--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" ng-app>
 
 <head>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body ng-app>
+<body>
   <!-- <textarea name="textarea" ng-model="content" placeholder="Info" rows="8" cols="80"></textarea> -->
 
   <div class="slider slider-height">
@@ -25,23 +25,85 @@
       <a class="previous" href="#"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
       <a class="next" href="#"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
     </div>
+
     <div class="slides">
+
       <div class="slide active blue" data-icon="&#xf0ac;">
-        <h2>Timezones</h2>
-        <p>Clocks+ helps you break the barriers of space and time to get information for any city you like. You can search for and organise your favorite cities so that you can easily find out the correct local time.</p>
-        <a target="_blank" href="https://itunes.apple.com/gb/app/clocks+/id937380413?mt=8">Check me out</a>
+        <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+        <textarea name="textarea" ng-model="content">{{ content }}</textarea>
       </div>
+
       <div class="slide white" data-icon="&#xf0f3;">
-        <h2>Alarms</h2>
-        <p>Nobody wants to miss out on important events, but sometimes, it’s hard to find the time in another city. Clocks+ lets you set alarms for your favorite cities in a simple and intuitive way.</p>
-        <a target="_blank" href="https://itunes.apple.com/gb/app/clocks+/id937380413?mt=8">Start the Clock</a>
+        <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+        <textarea name="textarea" ng-model="content">{{ content }}</textarea>
       </div>
+
       <div class="slide red" data-icon="&#xf013;">
-        <h2>Widgets/Today Extension</h2>
-        <p>Clocks+ wouldn’t be a modern app without Widgets. Your favorite cities appear in the Today View with just a swipe down, for quick glancing, Did we mention that they look awesome, too?</p>
-        <a target="_blank" href="https://itunes.apple.com/gb/app/clocks+/id937380413?mt=8">Download on AppStore</a>
+        <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+        <textarea name="textarea" ng-model="content">{{ content }}</textarea>
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+        <textarea name="textarea" ng-model="content">{{ content }}</textarea>
+      </div>
+
+      <div class="slide red" data-icon="&#xf0ac;">
+        <div class="video-background">
+          <div class="video-foreground">
+            <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div id="vidtop-content">
+          <div class="vid-info">
+            <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+            <textarea name="textarea" ng-model="content">{{ content }}</textarea>
+          </div>
+        </div>
+      </div>
+      <div class="slide red" data-icon="&#xf0ac;">
+        <div class="video-background">
+          <div class="video-foreground">
+            <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=0&loop=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div id="vidtop-content">
+          <div class="vid-info">
+            <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+            <textarea name="textarea" ng-model="content">{{ content }}</textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="slide red" data-icon="&#xf0ac;">
+        <div class="video-background">
+          <div class="video-foreground">
+            <iframe src="https://www.youtube.com/embed/h8mwhm0PoKc?controls=1&showinfo=0&rel=0&autoplay=0&loop=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div id="vidtop-content">
+          <div class="vid-info">
+            <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+            <textarea name="textarea" ng-model="content">{{ content }}</textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="slide blue" data-icon="&#xf0ac;">
+        <div class="video-background">
+          <div class="video-foreground">
+            <iframe src="https://www.youtube.com/embed/v64KOxKVLVg?controls=1&showinfo=0&rel=0&autoplay=0&loop=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div id="vidtop-content">
+          <div class="vid-info">
+            <h2><textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea></h2>
+            <textarea name="textarea" ng-model="content">{{ content }}</textarea>
+          </div>
+        </div>
       </div>
     </div>
+
     <div class="bullets"></div>
   </div>
 
@@ -49,6 +111,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="js/slider.js"></script>
 </body>
 
