Changing number of slides and adding logo

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,10 @@
 </head>
 
 <body>
-  <!-- <textarea name="textarea" ng-model="content" placeholder="Info" rows="8" cols="80"></textarea> -->
+  
+  <div class="site-logo">
+    <img class="logo" src="images/logo_VR.png" alt="VR Logo">
+  </div>
 
   <div class="slider slider-height">
     <div class="arrows">
@@ -61,10 +64,11 @@
           </div>
         </div>
       </div>
+      <!--
       <div class="slide red" data-icon="&#xf0ac;">
         <div class="video-background">
           <div class="video-foreground">
-            <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=0&loop=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=1&loop=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div id="vidtop-content">
@@ -78,7 +82,7 @@
       <div class="slide red" data-icon="&#xf0ac;">
         <div class="video-background">
           <div class="video-foreground">
-            <iframe src="https://www.youtube.com/embed/h8mwhm0PoKc?controls=1&showinfo=0&rel=0&autoplay=0&loop=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/h8mwhm0PoKc?controls=1&showinfo=0&rel=0&autoplay=1&loop=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div id="vidtop-content">
@@ -92,7 +96,7 @@
       <div class="slide blue" data-icon="&#xf0ac;">
         <div class="video-background">
           <div class="video-foreground">
-            <iframe src="https://www.youtube.com/embed/v64KOxKVLVg?controls=1&showinfo=0&rel=0&autoplay=0&loop=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/v64KOxKVLVg?controls=1&showinfo=0&rel=0&autoplay=1&loop=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div id="vidtop-content">
@@ -102,6 +106,7 @@
           </div>
         </div>
       </div>
+      -->
     </div>
 
     <div class="bullets"></div>
