Checking video autoplay issue

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <img class="slide-content" src="images/slides/slide08.png" alt="Slides">
       </div>
 
+      <!--
       <div class="slide white" data-icon="&#xf0ac;">
         <div class="video-background">
           <div class="video-foreground">
@@ -85,7 +86,8 @@
           </div>
         </div>
       </div>
-
+      -->
+      
       <div class="slide white" data-icon="&#xf0ac;">
         <!--
         <video id="bgvid" playsinline autoplay>
@@ -93,12 +95,12 @@
         </video>
         -->
 
-        <video controls id="bgvid" playsinline autopla>
+        <video controls id="bgvid" playsinline autoplay>
           <source src="images/slides/demo.mp4" type="video/mp4">
         </video>
 
         <div id="polina">
-          <button>Pause</button>
+          <button>Play</button>
         </div>
       </div>
     </div>
