--- a/app/index.html
+++ b/app/index.html
@@ -87,15 +87,9 @@
         </div>
       </div>
       -->
-      
-      <div class="slide white" data-icon="&#xf0ac;">
-        <!--
-        <video id="bgvid" playsinline autoplay>
-          <source src="images/slides/demo.mp4" type="video/mp4">
-        </video>
-        -->
 
-        <video controls id="bgvid" playsinline autoplay>
+      <div class="slide white" data-icon="&#xf0ac;">
+        <video id="bgvid" loop>
           <source src="images/slides/demo.mp4" type="video/mp4">
         </video>
 
@@ -108,10 +102,10 @@
     <div class="bullets"></div>
   </div>
 
-  <!-- Scripts -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>  
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/video.js"></script>
