--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,10 @@
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Styles -->
   <link rel="stylesheet" href="css/main.css">
   <link rel='stylesheet' href='css/slider.css'>
   <link rel='stylesheet' href='css/video.css'>
@@ -38,7 +38,6 @@
     </div>
 
     <div class="slides">
-
       <div class="slide active white">
         <div class="slide-welcome">
           <img class="logo-welcome" src="images/logo_VR.png" alt="VR Logo">
@@ -93,7 +92,7 @@
           <source src="images/slides/demo.mp4" type="video/mp4">
         </video>
 
-        <div id="polina">
+        <div class="slide-video" id="slide-video">
           <button>Play</button>
         </div>
       </div>
@@ -103,7 +102,7 @@
   </div>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>  
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
