--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,38 @@
       </div>
 
       <div class="slide white" data-icon="&#xf0f3;">
+        <img class="slide-content" src="images/slides/edu_chemestry.png" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <img class="slide-content height-adjust" src="images/slides/edu_geography_02.gif" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf013;">
+        <img class="slide-content height-adjust" src="images/slides/edu_oinercia.gif" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <img class="slide-content" src="images/slides/edu_geography.png" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf013;">
+        <img class="slide-content height-adjust" src="images/slides/edu_physics_02.gif" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf013;">
+        <img class="slide-content" src="images/slides/edu_biology.gif" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf013;">
+        <img class="slide-content" src="images/slides/edu_physics.png" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf0f3;">
+        <img class="slide-content" src="images/slides/edu_coding.png" alt="Slides">
+      </div>
+
+      <div class="slide white" data-icon="&#xf0f3;">
         <img class="slide-content" src="images/slides/slide01.png" alt="Slides">
       </div>
 
@@ -77,26 +109,66 @@
         <img class="slide-content" src="images/slides/slide08.png" alt="Slides">
       </div>
 
-      <!--
-      <div class="slide white" data-icon="&#xf0ac;">
-        <div class="video-background">
-          <div class="video-foreground">
-            <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
+      <div class="slide white" data-icon="&#xf013;">
+        <img class="slide-content" src="images/slides/slide06.png" alt="Slides">
       </div>
-      -->
 
       <div class="slide white" data-icon="&#xf0ac;">
         <video id="bgvid" loop>
-          <source src="images/slides/demo.mp4" type="video/mp4">
+          <source src="images/videos/demo_00.mp4" type="video/mp4">
         </video>
 
         <div class="slide-video" id="slide-video">
           <button>Play</button>
         </div>
       </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <div class="vrview">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/8rUwdtERUOM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <div class="vrview">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/rG4jSz_2HDY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <div class="vrview">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ZnOTprOTHc8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <div class="vrview">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/h8mwhm0PoKc?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="slide white" data-icon="&#xf0ac;">
+        <div class="vrview">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/-FyN5_-njAU?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
+
+    <!--
+    <div class="slide white" data-icon="&#xf0ac;">
+      <div class="video-background">
+        <div class="video-foreground">
+          <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    -->
+
+    <!--
+    <div class="slide white" data-icon="&#xf0ac;">
+      <div id="vrview" class="vrview"></div>
+    </div>
+    -->
 
     <div class="bullets"></div>
   </div>
@@ -104,10 +176,14 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- Scripts -->
+  <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/video.js"></script>
+  <!-- VR Scripts -->
+  <script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
+  <script src="js/vr.js"></script>
+  <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
 </body>
 
 </html>
