--- a/app/index.html
+++ b/app/index.html
@@ -23,39 +23,30 @@
 
 <body>
 
-  <div id="toolbar">
-    <div id="rad">
-      Radius <span id="radval">0.5</span>
-      <div id="decrad" class="radcontrol">-</div>
-      <div id="incrad" class="radcontrol">+</div>
-    </div>
-    <div id="colors"></div>
-    <div id="clear">Clear</div>
-  </div>
-  
-  <canvas id='canvas' style="display: block;">
-    Looks like your browser doesn't support canvas!
-  </canvas>
-
   <div class="site-logo">
     <img class="logo" src="images/logo_VR.png" alt="VR Logo">
   </div>
 
-  <!--<div class="vr-info-title">
+  <div class="vr-info-title">
     <textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea>
   </div>
 
-  <div class="vr-info-content">
+  <div class="vr-info-content">    
     <textarea class="content" name="textarea" ng-model="content">{{ content }}</textarea>
-  </div>-->
+  </div>
 
-  <!--<div class="slider slider-height">
+  <div class="draw-button">
+    <a href="draw.html" class="btn btn-primary">Draw</a>
+  </div>
+
+  <div class="slider slider-height">
     <div class="arrows">
       <a class="previous" href="#"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
       <a class="next" href="#"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
     </div>
 
     <div class="slides">
+
       <div class="slide active white">
         <div class="slide-welcome">
           <img class="logo-welcome" src="images/logo_VR.png" alt="VR Logo">
@@ -179,16 +170,16 @@
           </div>
         </div>
       </div>
-      
+
       <div class="slide white" data-icon="&#xf0ac;">
         <div id="vrview" class="vrview"></div>
       </div>
       -->
 
-    <!--</div>
+    </div>
 
     <div class="bullets"></div>
-  </div>-->
+  </div>
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
