Setting code lines

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="css/main.css">
   <link rel='stylesheet' href='css/slider.css'>
-  <link rel='stylesheet' href='css/video.css'>
-  <link rel='stylesheet' href='css/draw.css'>
+  <link rel='stylesheet' href='css/video.css'>  
 </head>
 
 <body>
@@ -31,7 +30,7 @@
     <textarea class="title" name="title" value="Title" ng-model="title">{{ title }}</textarea>
   </div>
 
-  <div class="vr-info-content">    
+  <div class="vr-info-content">
     <textarea class="content" name="textarea" ng-model="content">{{ content }}</textarea>
   </div>
 
@@ -160,7 +159,7 @@
         <div class="vrview">
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/-FyN5_-njAU?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
-      </div>-->
+      </div>
 
       <!--
       <div class="slide white" data-icon="&#xf0ac;">
@@ -188,12 +187,7 @@
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="js/slider.js"></script>
-  <script src="js/video.js"></script>
-  <script src="js/draw.js"></script>
-  <!-- VR Scripts -->
-  <script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
-  <script src="js/vr.js"></script>
-  <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
+  <script src="js/video.js"></script>   
 </body>
 
 </html>
