--- a/app/draw.html
+++ b/app/draw.html
@@ -2,60 +2,50 @@
 <html lang="en-US" ng-app>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VR</title>
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Styles -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel='stylesheet' href='css/slider.css'>
-    <link rel='stylesheet' href='css/video.css'>
-    <link rel='stylesheet' href='css/draw.css'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>VR</title>
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/main.css">
+  <link rel='stylesheet' href='css/draw.css'>
 </head>
 
 <body>
 
-    <div class="back-button">
-        <a href="/" class="btn btn-default">Back</a>
-    </div>
-
-    <div id="toolbar">
-        <div id="rad">
-            Radius <span id="radval">0.5</span>
-            <div id="decrad" class="radcontrol">-</div>
-            <div id="incrad" class="radcontrol">+</div>
-        </div>
-        <div id="colors"></div>
-        <div id="clear">Clear</div>
-    </div>
-
-    <canvas id='canvas' style="display: block;">
-        Looks like your browser doesĸŧn't support canvas!
-    </canvas>
-
+  <div class="back-button">
     <a href="/" class="btn btn-default">Back</a>
+  </div>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-    <!-- Scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script src="js/slider.js"></script>
-    <script src="js/video.js"></script>
-    <script src="js/draw.js"></script>
-    <!-- VR Scripts -->
-    <script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
-    <script src="js/vr.js"></script>
-    <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
+  <div id="toolbar">
+    <div id="rad">
+      Radius <span id="radval">0.5</span>
+      <div id="decrad" class="radcontrol">-</div>
+      <div id="incrad" class="radcontrol">+</div>
+    </div>
+    <div id="colors"></div>
+    <div id="clear">Clear</div>
+  </div>
+
+  <canvas id='canvas' style="display: block;">
+    Looks like your browser does not support canvas!
+  </canvas>
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+  <!-- Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="js/draw.js"></script>
 </body>
 
 </html>
