Correcting css properties

--- a/app/draw.html
+++ b/app/draw.html
@@ -35,7 +35,7 @@
     <div id="clear">Clear</div>
   </div>
 
-  <canvas id='canvas' style="display: block;">
+  <canvas id='canvas'>
     Looks like your browser does not support canvas!
   </canvas>
 
