--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,8 @@
           <img class="logo-welcome" src="images/logo_VR.png" alt="VR Logo">
           <h2>Welcome</h2>
         </div>
-      </div>
+        
+        <!-- Slides -->
 
       <div class="slide white" data-icon="&#xf0f3;">
         <img class="slide-content" src="images/slides/edu_chemestry.png" alt="Slides">
@@ -121,6 +122,8 @@
         <img class="slide-content" src="images/slides/slide06.png" alt="Slides">
       </div>
 
+      <!-- Videos -->
+
       <div class="slide white" data-icon="&#xf0ac;">
         <video id="bgvid" loop>
           <source src="images/videos/demo_00.mp4" type="video/mp4">
@@ -160,20 +163,6 @@
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/-FyN5_-njAU?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
-
-      <!--
-      <div class="slide white" data-icon="&#xf0ac;">
-        <div class="video-background">
-          <div class="video-foreground">
-            <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=1&showinfo=0&rel=0&autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-
-      <div class="slide white" data-icon="&#xf0ac;">
-        <div id="vrview" class="vrview"></div>
-      </div>
-      -->
 
     </div>
 
